fix: Gaps between about page elements

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -257,7 +257,7 @@ hr {
 
 .about-text-container{
     margin: 0 auto;
-    height: 300px;
+    max-height: 300px;
     padding: 20px 0;
     flex-grow: 1;
     align-items: center;
@@ -295,8 +295,8 @@ hr {
 
 .retouch-text-container{
     margin: 0 auto;
-    height: 300px;
-    padding: 70px 0;
+    max-height: 300px;
+    padding-top: 70px;
     flex-grow: 1;
     align-items: center;
 }
